fixed alignment
git-svn-id: https://source.sakaiproject.org/contrib/foothill/melete/trunk@47610 fdecad78-55fc-0310-b1b2-d7d25cf747c9

--- a/melete-app/src/webapp/rtbc004.css
+++ b/melete-app/src/webapp/rtbc004.css
@@ -594,6 +594,12 @@ color: #5A6D95;
    width:50%;
 	align:right;
 }
+.col30 {
+	width:30%;
+}
+.col50 {
+	width:50%;
+}
 
 .placeCenter{
 	align:center;
